tests/testfiles/invalid_prog_fails/27_use_void_variable3.c
#include <stdio.h>
void print() {
    printf("Hello world");
}

int main() {
    int x = -print();
    return 0;
}
